# diorama

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: alembic.ini  nixpacks.toml  package.json  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/diorama_api/: config.py  db.py  main.py  models.py  palatial.py  poller.py  schemas.py  service.py  storage.py
apps/api/tests/: test_contract.py
apps/web/: next.config.ts  package.json  railway.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/api/proxy/[...path]/: route.ts
apps/web/app/projects/[id]/: page.tsx
apps/web/app/scenes/: page.tsx
apps/web/components/: model-viewer.tsx  scene-canvas.tsx
apps/web/components/ui/: button.tsx  card.tsx  form.tsx
apps/web/lib/: api.ts
