[project]
name = "diorama-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.2",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "pydantic-settings>=2.9.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.2"
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "ruff>=0.11.10"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
